manifests/05-gatewayService/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
spec:
  selector:
    app: gateway
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30002
      protocol: TCP
